# concentrator

./: README.md  pyproject.toml
concentrator/: __main__.py  client.py  configs.py  load_test.py  logger.py  lora.py  main.py  spaces.py
concentrator_ui/: README.md  pubspec.yaml
concentrator_ui/android/app/: build.gradle
concentrator_ui/android/app/src/main/: AndroidManifest.xml
concentrator_ui/android/app/src/main/kotlin/com/example/concentrator_ui/: MainActivity.kt
concentrator_ui/ios/Runner/: Info.plist
concentrator_ui/ios/Runner.xcodeproj/: project.pbxproj
concentrator_ui/lib/: main.dart  redes
concentrator_ui/linux/: CMakeLists.txt  my_application.cc
concentrator_ui/macos/Runner/: Info.plist
concentrator_ui/macos/Runner.xcodeproj/: project.pbxproj
concentrator_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
concentrator_ui/macos/Runner/Configs/: AppInfo.xcconfig
concentrator_ui/web/: index.html  manifest.json
concentrator_ui/windows/: CMakeLists.txt
concentrator_ui/windows/runner/: Runner.rc  main.cpp
